# BCMS

./: .gitattributes  .gitignore  README.md  build-context.md  build-log.md  build-plan.md  consistency-registry.md  frontend-build-context.md  frontend-build-plan.md  frontend-consistency-registry.md
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_org_unit_excluded_cycles.py
backend/scripts/: registry_sweep.py
backend/src/app/: config.py  deps.py  main.py
backend/src/app/core/: clock.py  errors.py  logging.py
backend/src/app/infra/: tabular.py
backend/src/app/schemas/: __init__.py  consolidation.py
backend/tests/: conftest.py  test_scaffold.py
backend/tests/api/: conftest.py  test_accounts.py  test_audit.py  test_budget_uploads.py  test_cycles.py  test_dashboard.py  test_main.py  test_notifications.py  test_open_cycle.py  test_personnel.py  test_reports.py  test_shared_costs.py  test_templates.py
backend/tests/integration/: conftest.py  test_migrations.py
backend/tests/integration/accounts/: test_accounts_integration.py
backend/tests/integration/audit/: test_audit_integration.py
backend/tests/integration/budget_uploads/: test_integration.py
backend/tests/integration/consolidation/: test_integration.py
backend/tests/integration/infra/: test_db_helpers.py  test_db_session.py  test_jobs.py
backend/tests/integration/notifications/: test_notifications_integration.py
backend/tests/integration/personnel/: test_integration.py
backend/tests/integration/shared_costs/: test_integration.py
backend/tests/integration/templates/: test_templates_integration.py
backend/tests/unit/: test_config.py
backend/tests/unit/_shared/: test_queries.py  test_row_validation.py
backend/tests/unit/accounts/: conftest.py  test_service.py  test_validator.py
backend/tests/unit/api/: test_open_cycle_orchestrator.py
backend/tests/unit/audit/: conftest.py  test_actions.py  (+2 more)
(+301 files in other folders)
