[project]
name = "bcms-backend"
version = "0.1.0"
description = "Enterprise Annual Budget Collection Platform — backend API"
authors = [{ name = "BCMS Team" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.*",
    "uvicorn[standard]==0.32.*",
    "gunicorn==23.*",
    "pydantic==2.9.*",
    "pydantic-settings==2.*",
    "sqlalchemy==2.0.*",
    "asyncpg==0.30.*",
    "alembic==1.13.*",
    "authlib==1.3.*",
    "pyjwt==2.9.*",
    "openpyxl==3.1.*",
    "aiosmtplib==3.0.*",
    "apscheduler==3.10.*",
    "structlog==24.*",
    "cryptography==43.*",
    "jinja2==3.*",
    "python-multipart==0.0.*",
    "httpx==0.27.*",
    "orjson==3.*",
]

[project.optional-dependencies]
dev = [
    "pytest==8.*",
    "pytest-asyncio==0.24.*",
    "pytest-cov==5.*",
    "ruff==0.7.*",
    "pyright==1.1.*",
    "testcontainers[postgres]==4.*",
    "freezegun==1.*",
]

[tool.uv]
dev-dependencies = [
    "pytest==8.*",
    "pytest-asyncio==0.24.*",
    "pytest-cov==5.*",
    "ruff==0.7.*",
    "pyright==1.1.*",
    "testcontainers[postgres]==4.*",
    "freezegun==1.*",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "RUF", "N", "ANN", "ASYNC", "S", "PL"]
ignore = ["ANN101", "ANN102", "S101"]

[tool.ruff.format]
# Ruff formatter defaults

[tool.pyright]
include = ["src"]
strict = ["src/app/core", "src/app/domain"]
reportMissingImports = true
pythonVersion = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers --strict-config"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests requiring external services",
    "api: marks API-level tests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
